4lab/interface.ATG
#include <iostream>
#include <vector>
#include "header/interface.h"
#include "header/figure.h"

static Vector vector;

COMPILER Interface

CHARACTERS
    letter = 'A'..'Z' + 'a'..'z'.
    digit = "0123456789".
    cr = '\r'. lf = '\n'. tab = '\t'.

TOKENS
    Num = {"-"} digit { digit } {"."} {digit}.

IGNORE cr + lf + tab

PRODUCTIONS

    Interface = S { S }.

    S =
        "add"                              (. std::vector<point_t> data(3); .)
        SetTriangle<data>                  (. Triangle t = Triangle(data[0], data[1], data[2]);
                                              vector.append(t); .)
        |
        "set" Num                          (. int i = std::stoi(t->val); --i;
                                              std::vector<point_t> data(3); .)
        SetTriangle<data>                  (. Triangle t = Triangle(data[0], data[1], data[2]);
                                              vector.set(t, i); .)
        |
        "get" Num                          (. int i = std::stoi(t->val); --i;
                                              std::wcout << "> get " << i + 1 << "\n";
                                              Triangle t = vector.get(i);
                                              if (!t.is_removed) { std::wcout << i + 1 << ": " << t; }; .)
        |
        "print"                            (. std::wcout << "> print\n" << vector; .)
        |
        "remove" Num                       (. int i = std::stoi(t->val);
                                              vector.remove(i - 1); .)
        |
        Num                                (. int n1 = std::stoi(t->val); --n1; .)
        {
        "=" Num                            (. int n2 = std::stoi(t->val); --n2;
                                              std::wcout << "> " << n1 + 1 << " = " << n2 + 1 << "\n";
                                              Triangle t2 = vector.get(n2);
                                              if (!t2.is_removed) { vector.set(t2, n1); }; .)
        |
        "==" Num                           (. int n2 = std::stoi(t->val); --n2;
                                              std::wcout << "> " << n1 + 1 << " == " << n2 + 1 << "\n";
                                              Triangle t1 = vector.get(n1);
                                              Triangle t2 = vector.get(n2);
                                              if (!t1.is_removed && !t2.is_removed) {
                                                if (t1 == t2){ std::wcout << "true\n"; }
                                                else { std::wcout << "false\n"; }
                                              } .)
        }
    .

    SetTriangle<. std::vector<point_t>& data .>   (. double x, y; .)
            = "(" Num                          (. x = wcstod(t->val, NULL); .)
            "," Num                            (. y = wcstod(t->val, NULL);
                                                  data[0] = {x, y}; .)
            "),"
            "(" Num                            (. x = wcstod(t->val, NULL); .)
            "," Num                            (. y = wcstod(t->val, NULL);
                                                  data[1] = {x, y}; .)
            "),"
            "(" Num                            (. x = wcstod(t->val, NULL); .)
            "," Num                            (. y = wcstod(t->val, NULL);
                                                  data[2] = {x, y}; .)
            ")"
        .


END Interface.
